--- a/src/App.scss
+++ b/src/App.scss
@@ -40,7 +40,7 @@
    @mixin box-overlay() {
      -webkit-box-shadow: $generic-box-shadow;
              box-shadow: $generic-box-shadow;
-     position: absolute;
+     position: relative;
      width: 100%;
      z-index: 1;
      top: 85px;
